# ftm-optimal

./: README.md  main.py  pyproject.toml  requirements.txt  scenario.cc
experiments/: README.md  ftm-bd-15-spb-1-ret-1-dr-20-3sta.txt  ftm-bd-15-spb-1-ret-5-dr-20-3sta.txt  ftm-bd-15-spb-2-ret-3-dr-20-3sta-100ftms.txt  ftm-bd-15-spb-3-ret-2-dr-20-3sta-100ftms.txt  ftm-bd-15-spb-5-ret-1-dr-20-3sta-100ftms.txt  ftm-bd-15-spb-5-ret-1-dr-20-3sta.txt  ftm-bd-15-spb-5-ret-5-dr-20-3sta-100ftms.txt
ftm_ml/envs/: ns3_ai_structures.py  run.py
ns3_files/scratch/: scenario.cc
results/: best_params.csv  best_params.md
results/experiment/: ftm-bd-15-spb-1-ret-1-dr-20-3sta-100ftms.txt  ftm-bd-15-spb-2-ret-3-dr-20-3sta-100ftms2.txt  ftm-bd-15-spb-2-ret-3-dr-20-3sta-100ftms3.txt  ftm-bd-15-spb-3-ret-3-dr-20-3sta-100ftms2.txt  ftm-bd-15-spb-5-ret-5-dr-20-3sta.txt
scripts/: run_ablation.sh  run_default.sh  run_dynamic.sh  run_optimization.sh
