[project]
name = "ftm-ml"
version = "0.1.0"
description = ""

readme = "README.md"
license = {file = "LICENSE"}
keywords = []

authors = [
  {name = "Maksymilian Wojnar", email = "maksymilian.wojnar@agh.edu.pl"},
  {name = "Kamil Szczęch", email = "kamil.szczech@agh.edu.pl"},
  {name = "Katarzyna Kosek-Szott", email = "katarzyna.kosek-szott@agh.edu.pl"}
]

requires-python = ">=3.9"
dependencies = [
  "jax~=0.4.30",
  "reinforced-lib==1.1.4",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ftm_ml"]
